# Sui-Shiijii

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
.cmake/api/v1/reply/: cache-v2-7e660fccdb3630a6e88e.json  cmakeFiles-v1-53926c250ae0d45e747d.json  codemodel-v2-69c792299a9a14f180c2.json  index-2024-09-14T19-50-17-0264.json  target-Sui-Shiijii-Debug-0554426a8cda90f9894e.json  toolchains-v1-ddb8035805ffa8cb9fff.json
bins/: Sui-Shiijii
include/: shader.h
lib/: Camera.h  EBO.h  ObjLoader.h  ObjRenderer.h  Shader.h  Transformations.h  VAO.h  VBO.h  Vertex.h  camera.h  shader.cpp  shader.h  transformations.cpp  transformations.h
shaders/: basic_lighting.frag  colors.frag  lighting_maps.frag  materials.frag  tri.frag
src/: glad.c  glad.h  main.cpp
